# RecursiveUI

./: .gitignore  LICENSE  README.md  RUN_ME.md  package-lock.json  package.json
app/: package-lock.json  package.json
app/sidecar/: README.md  catalog.ts  discovery.ts  evolution.test.ts  evolution.ts  generator.ts  genome.schema.json  genome.test.ts  genome.ts  index.ts  ipc.test.ts  package.json  regen.ts  skill-manifest.ts  telemetry.ts
app/src/: App.css  App.tsx  main.tsx  theme.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs  sidecar.rs
app/src/components/: EvolutionToast.tsx  GenerationProgress.tsx
app/src/sdk/: useEvolution.ts  useGenerationProgress.ts
app/src/windows/: InvestigateApp.tsx  OfficeHoursApp.tsx  QAApp.tsx  ReviewApp.tsx  ShipApp.tsx  SpectacleApp.tsx  StudioApp.tsx  registry.ts
paper/: recursiveui-self-evolving-ui.tex
paper/figures/: figures.html
