[package]
name = "recursiveui"
version = "0.1.0"
description = "Self-evolving UI for AI agents"
authors = ["chandrahas.aroori@gmail.com"]
edition = "2021"

[lib]
name = "recursiveui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "process", "io-util", "macros"] }
